Use new options format in adapter

--- a/config/services.yml
+++ b/config/services.yml
@@ -22,5 +22,6 @@ services:
     rubencm.storage.provider.db:
         class: rubencm\storage_db\provider\db
         arguments:
+            - '@language'
         tags:
             - { name: storage.provider }
